--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -50,13 +50,14 @@ body {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .profile-img {
-	border-radius: 50%;
-	width: 90px;
+    border-radius: 50%;
+    width: 41px;
 }
 .banner {
-	background-color: #4CAF50;
-	color: white;
-	padding: 10px
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    height: 60px;
 }
 .banner a {
 	padding-left: 5px;
@@ -179,4 +180,15 @@ body{
   z-index:1;
   background:rgba(0,0,0,.1);
    @include prefix(transition , .5s);
+}
+.col-10 {
+	padding-right: 0px;
+	padding-left: 0px;
+}
+.header {
+    background-color: #4caf50;
+    height: 60px;
+}
+.content {
+    padding: 10px;
 }
