--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
 	background-color: #e0e0d1;
+}
+a {
+	font-family: 'Noto Sans JP', sans-serif;
+}
+p {
+	font-family: 'Roboto', sans-serif;
 }
 .vertical-menu {
   width: 100%;
