--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -206,3 +206,21 @@ a.head {
 .content {
     padding: 10px;
 }
+
+.app {
+    width: 20%;
+    background-color: #4c7daf85;
+    height: 200px;
+    text-align: center;
+    float: left;
+		margin-right: 10px;
+}
+.app a {
+    font-size: 25px;
+}
+img.appedit {
+    width: 20%;
+}
+img.appdetail {
+    width: 20%;
+}
