--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -241,7 +241,7 @@ img.appdetail {
 .appalert {
     padding: 5px 5px 5px 10px;
 }
-button.deleteapp .button{
+button.deleteapp {
     border: none;
     padding: 5px 15px;
     cursor: pointer;
@@ -249,4 +249,16 @@ button.deleteapp .button{
     display: inline-block;
     background-color: #ec0b0b;
     color: #eeeeee;
+}
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: #eeeeee;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
