--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -267,6 +267,6 @@ button.deleteapp:hover {
 }
 .button:hover {
 	background-color: #1e4420;
-	color: #000000;
+	color: #ffffff;
 	text-decoration: none;
 }
