--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -231,13 +231,12 @@ img.appdetail {
   width: 20%;
 }
 .overlay {
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: 20%;
+  width: 20%;
   opacity: 0;
   transition: .5s ease;
   background-color: #008CBA;
@@ -252,6 +251,9 @@ img.appdetail {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+.imgcont:hover .imgcont {
+  opacity: 1;
 }
 .panel.panel-default {
   background-color: #ff1717;
