--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -227,8 +227,21 @@ body{
 .app a {
   font-size: 25px;
 }
-img.appdetail {
-  width: 20%;
+a.detail {
+	background-color: #4caf50;
+  border: none;
+  color: #eeeeee;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  cursor: pointer;
+}
+.button:hover {
+	background-color: #1e4420;
+	color: #ffffff;
+	text-decoration: none;
 }
 .overlay {
   top: 0;
