--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -383,3 +383,44 @@ color: white;
 .buttondanger {
 	width: 100%;
 }
+.modal-content2 {
+position: relative;
+background-color: #fefefe;
+margin: auto;
+padding: 0;
+border: 1px solid #888;
+width: 30%;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+-webkit-animation-name: animatetop;
+-webkit-animation-duration: 0.4s;
+animation-name: animatetop;
+animation-duration: 0.4s
+}
+/* The Close Button */
+.close2 {
+color: white;
+float: right;
+font-size: 28px;
+font-weight: bold;
+}
+.close2:hover,
+.close2:focus {
+color: #000;
+text-decoration: none;
+cursor: pointer;
+}
+
+.modal-header2 {
+padding: 2px 16px;
+background-color: #cc1717;
+color: white;
+display: block;
+}
+
+.modal-body2 {padding: 2px 16px;}
+
+.modal-footer2 {
+padding: 2px 16px;
+background-color: #fefefe;
+color: white;
+}
