--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -383,3 +383,16 @@ color: white;
 .buttondanger {
 	width: 100%;
 }
+input[type="text"] {
+    width: 100%;
+    padding: 7px 10px;
+    margin: 3px 0px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+label {
+    display: inline-block;
+    margin-bottom: 0px;
+}
