--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -396,3 +396,16 @@ label {
     display: inline-block;
     margin-bottom: 0px;
 }
+.appform {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 7px 20px;
+    margin: 8px 0px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.appform:hover {
+  background-color: #45a049;
+}
