--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -413,8 +413,8 @@ span.error {
     color: #ff0000ad;
     font-size: 14px;
 }
-button:disabled,
-button[disabled]{
+button.appform:disabled,
+button.appform[disabled]{
 	width: 100%;
   background-color: #616161;
   color: white;
@@ -423,14 +423,13 @@ button[disabled]{
   border: none;
   border-radius: 4px;
 }
-button:disabled:hover,
-button[disabled]:hover{
+button.appform:disabled:hover,
+button.appform[disabled]:hover{
 	width: 100%;
-	background-color: #828080;
+	background-color: #616161;
 	color: white;
 	padding: 7px 20px;
 	margin: 8px 0px;
 	border: none;
 	border-radius: 4px;
-	cursor: pointer;
 }
