--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -444,3 +444,6 @@ button.appform[disabled]:hover{
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     margin: 30px auto;
 }
+td.cl-input {
+	width: 85%;
+}
