--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -461,5 +461,12 @@ td.cl-chackbox {
     margin: 0px auto;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     background-color: white;
-		padding: 10px;
+		padding: 20px;
+}
+.formheader {
+    margin: -20px -20px 10px -20px;
+    padding: 10px;
+    background-color: #cccccc;
+    font-size: 24px;
+    color: #000000;
 }
