--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -471,3 +471,9 @@ td.cl-chackbox {
     font-size: 24px;
     color: #000000;
 }
+.loadimg {
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
