--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -458,11 +458,15 @@ td.cl-chackbox {
 .shResult {
     position: relative;
     width: 70%;
+		display: none;
+		opacity: 0;
     margin: 0px auto;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     background-color: white;
 		padding: 20px;
-		display: none;
+		visibility: hidden;
+		-webkit-transition: opacity 600ms, visibility 600ms;
+  	transition: opacity 600ms, visibility 600ms;
 }
 .formheader {
     margin: -20px -20px 10px -20px;
