--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -117,6 +117,7 @@ a.menu-btn {
   border: 1px solid #ccc;
   border-top: none;
 	background-color: #cccccc;
+	overflow: hidden;
 }
 
 .topright {
@@ -577,4 +578,8 @@ div#rate {
     margin-top: 5px;
     color: #f51111;
     font-size: 14px;
+}
+.graph {
+    width: 50%;
+    float: left;
 }
