--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -583,3 +583,12 @@ div#rate {
     width: 50%;
     float: left;
 }
+span.keyword {
+    border-left: 6px solid red;
+    margin: 4px;
+    background-color: #f1b9b9;
+    padding: 5px;
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: inline-block;
+}
