--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -592,7 +592,7 @@ span.keyword {
     margin-bottom: 5px;
     display: inline-block;
 }
-.graph {
+.statKeyword {
     width: 100%;
     float: left;
 }
