--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@media screen and (max-width: 1000px) {
+	.title a {
+    font-size: 20px;
+	}
+	a.menu-btn {
+    font-size: 18px;
+	}
+}
+
 body {
 	background-color: #e0e0d1;
 }
