--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -228,13 +228,18 @@ body{
   height: 50px;
 }
 .app {
-  width: 19%;
-  background-color: #4c7daf85;
-  height: 200px;
-  text-align: center;
-  float: left;
-	margin-right: 10px;
-	margin-bottom: 10px;
+	background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 25%;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.app:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .app a {
   font-size: 25px;
