--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -232,11 +232,13 @@ body{
   border-radius: 2px;
   display: inline-block;
   height: 300px;
-  margin: 1rem;
+  margin: 0.5rem;
   position: relative;
   width: 25%;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	float: left;
+  text-align: center;
 }
 .app:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
