--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -239,6 +239,7 @@ body{
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	float: left;
   text-align: center;
+	cursor: pointer;
 }
 .app:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
